--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Aqui podras ver información acerca de las habilidades de cada campeón de League of Legends">
+    <meta name="description"
+        content="Aqui podras ver información acerca de las habilidades de cada campeón de League of Legends">
     <meta name="keywords" content="League, Legends, League of Legends, Lol, Moba, 5v5">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
