Se le añadio el reset al css y el titulo al index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>LoL Skills</title>
 </head>
-
 <body>
 
 </body>
